# servicemaker

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DOCKER_HUB_SETUP.md  Dockerfile.express.template  Dockerfile.nodejs.template  Dockerfile.template  Makefile  README.md
.circleci/: config.yml
arango-test-service/: README.md  index.html  main.py  pyproject.toml
arango-test-service-nodejs/: README.md  logger.js  main.js  package.json  swagger.js
arango-test-service/ui/: index.html
baseimages/: Dockerfile.node22base  Dockerfile.nodebaseimage  Dockerfile.py12base  Dockerfile.py12cugraph  Dockerfile.py12torch  Dockerfile.py13base  Dockerfile.py13cugraph  Dockerfile.py13torch  Dockerfile.python12  Dockerfile.python13  Dockerfile.python13-cugraph  Makefile  build.sh  imagelist.txt  push.sh  scan_security.sh
baseimages/scripts/: debinstall.sh  entrypoint.sh  nvidia_lib_path.sh  prepareuv.sh
charts/: .gitignore  Chart.yaml  values.yaml
charts/templates/: _helpers.tpl  deployment.yaml  route.yaml  service-account.yaml  service.yaml  token-permissions.yaml
design/: PlatformServices.md
docs/: ARCHITECTURE.md  ARCHITECTURE_EXPRESS.md  SERVICEMAKER_OVERVIEW_AND_RISKS.md  SERVICE_COMPARISON.md
scripts/: check-base-dependencies.js  obfuscate_python.sh  prepareproject-express.sh  prepareproject-nodejs.sh  prepareproject.sh  zipper.sh
servicemaker-arango-test-service-70408/: Dockerfile
servicemaker-arango-test-service-70408/arango-test-service/: main.py
servicemaker-arango-test-service-70408/scripts/: zipper.sh
src/: main.rs
testprojects/tiny/: README.md  (+2 more)
(+17 files in other folders)
