[package]
name = "servicemaker"
version = "0.9.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "integration_tests"
path = "src/bin/integration_tests.rs"
